--- a/PROJET STAR/index.css
+++ b/PROJET STAR/index.css
@@ -4,47 +4,11 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-nav{
-    width: 100%;
-    margin: 0 auto;
-    background-color: black;
-    position: sticky;
-    top: 0px;
-    padding-top: 10px;
-
-}
-
-nav ul{
-    list-style-type: none;
-}
-
-nav ul li{
-    float: left;
-    width: 23%;
-    text-align: center;
-    position: relative;
-}
-nav ul::after{
-    content: "";
-    display: table;
-    clear: both;
-
-}
-
-nav a {
-    display: block;
-    text-decoration: none;
-    color: white;
-    border-bottom: 2px solid transparent;
-    padding: 10px 0px;
-}
 
 div p{
     font-size: medium;
     text-align: left;
-    
     color: black;
-    
 }
 
 .pute{
@@ -85,21 +49,62 @@ body{
     position: absolute;
 }
 
+
+/*Barre de navigation*/
+
+.navIconHeader:hover{
+    transform: scale(1.04);
+    filter: brightness(1);
+}
+.navIconHeader {
+    filter: brightness(0.6);
+    transition: all 0.3s;
+}
 .accueil{
-    margin-right: 700px;
+    margin-right: 70%;
     
 }
 
 .option{
-    width: 20%;
-    margin: 20px;
+    margin-right: 80%;
     position: relative;
 
 
+
+}
+nav{
+    width: 100%;
+    margin: 0 auto;
+    background-color: black;
+    position: sticky;
+    top: 0px;
+    padding-top: 10px;
+
 }
 
+nav ul{
+    list-style-type: none;
+}
 
+nav ul li{
+    float: left;
+    width: 23%;
+    text-align: center;
+    position: relative;
+}
+nav ul::after{
+    content: "";
+    display: table;
+    clear: both;
 
+}
 
+nav a {
+    display:inline;
+    text-decoration: none;
+    color: white;
+    border-bottom: 0px solid transparent;
+    padding: 0px 0px;
+}
 
 
