--- a/PROJET STAR/style/index.css
+++ b/PROJET STAR/style/index.css
@@ -20,14 +20,14 @@ body{
   margin-left: 0%;
   width: 98.8%;  
   overflow: auto; 
-  background-color: darkslateblue;
+  background-color: rgba(13, 14, 14, 1);
   position: fixed;
   display: block;
 }
 .icon-bar a {
   float: left;
   position:relative ;
-  margin-left: 5%;
+  margin-left: 4.5%;
   text-align: center; 
   width: 0%; 
   padding: 0px 0; 
@@ -49,7 +49,7 @@ body{
   margin-left: 53%;
   width: 40%;  
   overflow: auto; 
-  background-color: darkslateblue;
+  background-color: rgba(13, 14, 14, 0.5);
   position:absolute;
   position: fixed;
   display: block;
@@ -76,7 +76,7 @@ body{
   margin-left: 0%;
   width: 50%;  
   overflow: auto; 
-  background-color: darkslateblue;
+  background-color: rgba(13, 14, 14, 0.75);
   position: absolute;
   display: block;
 }
@@ -127,17 +127,17 @@ display: none;
   display:block;
   max-height: 300px;
   width: auto;
-background-color: aqua;
+  background-color: rgba(13, 14, 14, 0.75);
 }
 
 .submenu {
-background-color: blue;
+  background-color: rgba(13, 14, 14, 0.5);
 overflow:scroll;
 max-height: 0;
 max-width: 100%;
 transition: all 0.3s ease-out;
 z-index: 10;
-margin-top: 6%;
+margin-top: 5%;
 text-align: center;
 
 }
@@ -146,8 +146,11 @@ text-align: center;
 
 .Akshan{
   display: inline-block;
-  
   margin-left: 10%;
 }
 
+.Belveth {
+  display: inline-block;
+  margin-left: 20%;
+}
 
