--- a/PROJET STAR/style/index.css
+++ b/PROJET STAR/style/index.css
@@ -2,9 +2,19 @@
   margin: 2px;
   padding: 2px;
   font-family: 'Courier New', Courier, monospace;
+  scrollbar-width: thin;
+  scrollbar-color: blue black;
 }
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 100px;
+  border: 10px solid ;
+}
+
+
 body{
   color: white;
+  margin-left: -1.5px;
   margin-top: 000px;
   margin-bottom: 100px;
   background-image: url("fond\ 1.png");
@@ -17,12 +27,13 @@ body{
 
 
 .icon-bar {
-  margin-left: 0%;
-  width: 98.8%;  
+  margin-left: -1%;
+  width: 101%;  
   overflow: auto; 
   background-color: rgba(13, 14, 14, 1);
   position: fixed;
   display: block;
+  margin-top: -1%;
 }
 .icon-bar a {
   float: left;
@@ -54,7 +65,7 @@ body{
   position: fixed;
   display: block;
   z-index: 10;
-  margin-top: 20px;
+  margin-top: 0.2%;
 }
 
 .carte a {
@@ -67,7 +78,6 @@ body{
   transition: all 0.3s ease;
   color: #fff; 
   font-size: 0px; 
-  margin-top: 10px;
 }
 
 
@@ -142,15 +152,38 @@ text-align: center;
 
 }
 
-
-
-.Akshan{
-  display: inline-block;
-  margin-left: 10%;
+.mouais{
+  margin-top: 25%;
+  margin-left: -1%;
+  width: auto;
+  height: 50%;
+  max-width: 101%;
 }
 
-.Belveth {
-  display: inline-block;
+
+
+.articles {
+  margin-top: 30%;
   margin-left: 20%;
+  width: 30%;
+  height: 31vw;
+  position: relative;
+  background-color: rgba(18, 18, 18, 0.8);
+  box-shadow: 0 3px 7px 0 rgb(0 0 0 / 35%);
+  border-radius: 4px;
+  cursor: pointer;
+  z-index: 10;
 }
+
+.newArticlesImg:hover {
+  transform: scale(1.1);
+}
+
+.newArticlesImg {
+  width: 50%;
+  transition: transform .5s ease;
+}
+
+
+
 
