--- a/PROJET STAR/style/index.css
+++ b/PROJET STAR/style/index.css
@@ -27,6 +27,7 @@ body{
 
 
 .icon-bar {
+  z-index: 50;
   margin-left: -1%;
   width: 101%;  
   overflow: auto; 
@@ -58,13 +59,14 @@ body{
 
 .carte {
   margin-left: 53%;
+  z-index: 55;
   width: 40%;  
   overflow: auto; 
   background-color: rgba(13, 14, 14, 0.5);
   position:absolute;
   position: fixed;
   display: block;
-  z-index: 10;
+  
   margin-top: 0.2%;
 }
 
@@ -84,6 +86,7 @@ body{
 
 .logo {
   margin-left: 0%;
+
   width: 50%;  
   overflow: auto; 
   background-color: rgba(13, 14, 14, 0.75);
@@ -106,6 +109,7 @@ body{
 
 .navigation {
   width: 99%;
+  z-index: 50;
 }
 .maison{
   position: absolute;
@@ -153,25 +157,60 @@ text-align: center;
 }
 
 .mouais{
-  margin-top: 25%;
+  margin-top: 13%;
   margin-left: -1%;
   width: auto;
   height: 50%;
   max-width: 101%;
+  text-decoration: none;
 }
 
 
 
-.articles {
-  margin-top: 30%;
-  margin-left: 20%;
-  width: 30%;
+.news1 > a{
+  position: absolute;
+  z-index: 0;
+  margin-top: 15%;
+  margin-left: 4%;
+  width: 27%;
   height: 31vw;
-  position: relative;
   background-color: rgba(18, 18, 18, 0.8);
   box-shadow: 0 3px 7px 0 rgb(0 0 0 / 35%);
-  border-radius: 4px;
+  border-radius: 20px;
   cursor: pointer;
+  text-decoration: none;
+  z-index: 10;
+  
+}
+
+
+.news  > a{
+  z-index: -100;
+  position: absolute;
+  margin-top: 15%;
+  margin-left: 35.7%;
+  width: 27%;
+  height: 31vw;
+  background-color: rgba(18, 18, 18, 0.8);
+  box-shadow: 0 3px 7px 0 rgb(0 0 0 / 35%);
+  border-radius: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  z-index: 10;
+}
+
+.news2 > a{
+  z-index: -100;
+  position: absolute;
+  margin-top: 15%;
+  margin-left: 67.5%;
+  width: 27%;
+  height: 31vw;
+  background-color: rgba(18, 18, 18, 0.8);
+  box-shadow: 0 3px 7px 0 rgb(0 0 0 / 35%);
+  border-radius: 20px;
+  cursor: pointer;
+  text-decoration: none;
   z-index: 10;
 }
 
@@ -180,10 +219,24 @@ text-align: center;
 }
 
 .newArticlesImg {
-  width: 50%;
+  margin-top: 4%;
+  margin-left: 3.2%;
+  position: absolute;
+  width: 90%;
   transition: transform .5s ease;
 }
 
 
+.titre{
+  color: #fff;
+  margin-top: 58%;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  text-decoration: none;
+}
 
-
+.textenews{
+  color: #fff;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+}
