--- a/PROJET STAR/style/index.css
+++ b/PROJET STAR/style/index.css
@@ -17,146 +17,14 @@ body{
   margin-left: -1.5px;
   margin-top: 000px;
   margin-bottom: 100px;
-  background-image: url("fond\ 1.png");
+  background-image: url("../images/fonds/fond\ 1.png");
   background-position: 0px 80px;
   background-repeat: no-repeat;
   background-size: auto;
   background-attachment: fixed;
 }
 
-
-
-.icon-bar {
-  z-index: 50;
-  margin-left: -1%;
-  width: 101%;  
-  overflow: auto; 
-  background-color: rgba(13, 14, 14, 1);
-  position: fixed;
-  display: block;
-  margin-top: -1%;
-}
-.icon-bar a {
-  float: left;
-  position:relative ;
-  margin-left: 4.5%;
-  text-align: center; 
-  width: 0%; 
-  padding: 0px 0; 
-  transition: all 0.3s ease;
-  color: white; 
-  font-size: 0px; 
-  margin-top: 10px;
-}
-
-.icon-bar a:hover, label {
-  filter: brightness(120%);
-  transition: filter 0.25s ease;
-}
-
-
-
-
-.carte {
-  margin-left: 53%;
-  z-index: 55;
-  width: 40%;  
-  overflow: auto; 
-  background-color: rgba(13, 14, 14, 0.5);
-  position:absolute;
-  position: fixed;
-  display: block;
-  
-  margin-top: 0.2%;
-}
-
-.carte a {
-  float: left;
-  position:relative ;
-  margin-left: 0%;
-  text-align: center; 
-  width: 20%; 
-  padding: 7px 0; 
-  transition: all 0.3s ease;
-  color: #fff; 
-  font-size: 0px; 
-}
-
-
-
-.logo {
-  margin-left: 0%;
-
-  width: 50%;  
-  overflow: auto; 
-  background-color: rgba(13, 14, 14, 0.75);
-  position: absolute;
-  display: block;
-}
-.logo a {
-  float: left;
-  position:relative ;
-  margin-left: 0%;
-  text-align: center; 
-  width: 20%; 
-  padding: 7px 0; 
-  transition: all 0.3s ease;
-  color: #fff; 
-  font-size: 0px; 
-}
-
-
-
-.navigation {
-  width: 99%;
-  z-index: 50;
-}
-.maison{
-  position: absolute;
-  margin-left: 40%;
-  cursor: pointer;
-  margin-top: 11px;
-}
-.mainmenu, .submenu {
-list-style: none;
-padding: 0;
-margin: 0;
-
-}
-.mainmenu a, .mainmenu label {
-display: block;
-text-decoration: none;
-padding: 0px;
-color: #000;
-}
-
-
-/* hide the input */
-.mainmenu input {
-display: none;
-}
-/* if a sibling checkbox is check show the menu */
-.mainmenu input:checked ~ .submenu {
-  position:relative;
-  display:block;
-  max-height: 300px;
-  width: auto;
-  background-color: rgba(13, 14, 14, 0.75);
-}
-
-.submenu {
-  background-color: rgba(13, 14, 14, 0.5);
-overflow:scroll;
-max-height: 0;
-max-width: 100%;
-transition: all 0.3s ease-out;
-z-index: 10;
-margin-top: 5%;
-text-align: center;
-
-}
-
-.mouais{
+.arbre{
   margin-top: 13%;
   margin-left: -1%;
   width: auto;
@@ -167,76 +35,4 @@ text-align: center;
 
 
 
-.news1 > a{
-  position: absolute;
-  z-index: 0;
-  margin-top: 15%;
-  margin-left: 4%;
-  width: 27%;
-  height: 31vw;
-  background-color: rgba(18, 18, 18, 0.8);
-  box-shadow: 0 3px 7px 0 rgb(0 0 0 / 35%);
-  border-radius: 20px;
-  cursor: pointer;
-  text-decoration: none;
-  z-index: 10;
-  
-}
 
-
-.news  > a{
-  z-index: -100;
-  position: absolute;
-  margin-top: 15%;
-  margin-left: 35.7%;
-  width: 27%;
-  height: 31vw;
-  background-color: rgba(18, 18, 18, 0.8);
-  box-shadow: 0 3px 7px 0 rgb(0 0 0 / 35%);
-  border-radius: 20px;
-  cursor: pointer;
-  text-decoration: none;
-  z-index: 10;
-}
-
-.news2 > a{
-  z-index: -100;
-  position: absolute;
-  margin-top: 15%;
-  margin-left: 67.5%;
-  width: 27%;
-  height: 31vw;
-  background-color: rgba(18, 18, 18, 0.8);
-  box-shadow: 0 3px 7px 0 rgb(0 0 0 / 35%);
-  border-radius: 20px;
-  cursor: pointer;
-  text-decoration: none;
-  z-index: 10;
-}
-
-.newArticlesImg:hover {
-  transform: scale(1.1);
-}
-
-.newArticlesImg {
-  margin-top: 4%;
-  margin-left: 3.2%;
-  position: absolute;
-  width: 90%;
-  transition: transform .5s ease;
-}
-
-
-.titre{
-  color: #fff;
-  margin-top: 58%;
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  text-decoration: none;
-}
-
-.textenews{
-  color: #fff;
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-}
