--- a/PROJET STAR/style/pageChara.css
+++ b/PROJET STAR/style/pageChara.css
@@ -17,7 +17,7 @@
     margin-left: -1.5px;
     margin-top: 000px;
     margin-bottom: 100px;
-    background-image: url("../images/fonds/fond-chara\(1\).png");
+    background-image: url("../images/fonds/wallpaperpagechara.jpg");
     background-position: 0px 80px;
     background-repeat: no-repeat;
     background-size: auto;
