--- a/PROJET STAR/style/pageChara.css
+++ b/PROJET STAR/style/pageChara.css
@@ -1,7 +1,7 @@
 *{
     margin: 2px;
     padding: 2px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family:Arial, Helvetica, sans-serif;
     scrollbar-width: thin;
     scrollbar-color: blue black;
   }
@@ -22,6 +22,7 @@
     background-repeat: no-repeat;
     background-size: auto;
     background-attachment: fixed;
+   
   }
 .parchemin{
   margin-top: 4%;
