--- a/PROJET WEB/style/info.css
+++ b/PROJET WEB/style/info.css
@@ -1,8 +1,9 @@
 
 
 .fondnews{
-    width: 98%;
+    width: 90%;
     margin-bottom: -0.6%;
+    margin-left: 5%;
 }
 
 
@@ -35,32 +36,146 @@ body{
 }
 
 
-.allArticles{
+.allArticles1{
   width: 40vw;
   position: absolute;
-  left: 10vw;
+  left: 0vw;
   padding: 10vh 5vw;
   background-color: rgba(57, 59, 64, 0);
-  margin-left: 14%;
+  margin-left: 2%;
+}
+.allArticles2{
+  width: 40vw;
+  position: absolute;
+  left: 0vw;
+  padding: 10vh 5vw;
+  background-color: rgba(57, 59, 64, 0);
+  margin-left: 45%;
+}
+.allArticles3{
+  width: 40vw;
+  position: absolute;
+  left: 0vw;
+  padding: 10vh 5vw;
+  background-color: rgba(57, 59, 64, 0);
+  margin-left: 2%;
+  margin-top: 10%;
+}
+.allArticles4{
+  width: 40vw;
+  position: absolute;
+  left: 0vw;
+  padding: 10vh 5vw;
+  background-color: rgba(57, 59, 64, 0);
+  margin-left: 45%;
+  margin-top: 10%;
+}
+.allArticles5{
+  width: 40vw;
+  position: absolute;
+  left: 0vw;
+  padding: 10vh 5vw;
+  background-color: rgba(57, 59, 64, 0);
+  margin-left: 2%;
+  margin-top: 20%;
 }
 
-.singleArticles {
+
+
+
+
+.singleArticles1 {
   height: 7vw;
   margin: 1vw 0;
   padding: 1% 1.5%;
 }
-.singleArticles a {
+.singleArticles2 {
+  height: 7vw;
+  margin: 1vw 0;
+  padding: 1% 1.5%;
+}
+.singleArticles3 {
+  height: 7vw;
+  margin: 1vw 0;
+  padding: 1% 1.5%;
+}
+.singleArticles4 {
+  height: 7vw;
+  margin: 1vw 0;
+  padding: 1% 1.5%;
+}
+.singleArticles5 {
+  height: 7vw;
+  margin: 1vw 0;
+  padding: 1% 1.5%;
+}
+
+
+.singleArticles1 a {
   position: relative;
-  height: 100%;
+  height: 90%;
   border-radius: 0.5vw;
   padding: 1% 1.5%;
   display: flex;
-  border: solid 3px rgba(57, 59, 64, 0);
+  border: solid 10px black;
   transition: border-color 0.2s linear;
-  background-color:beige;
+  background-color: rgb(29, 35, 35);
   cursor: pointer;
   text-decoration: none;
 }
+.singleArticles2 a {
+  position: relative;
+  height: 90%;
+  border-radius: 0.5vw;
+  padding: 1% 1.5%;
+  display: flex;
+  border: solid 10px black;
+  transition: border-color 0.2s linear;
+  background-color: rgb(29, 35, 35);
+  cursor: pointer;
+  text-decoration: none;
+
+}
+.singleArticles3 a {
+  position: relative;
+  height: 90%;
+  border-radius: 0.5vw;
+  padding: 1% 1.5%;
+  display: flex;
+  border: solid 10px black;
+  transition: border-color 0.2s linear;
+  background-color: rgb(29, 35, 35);
+  cursor: pointer;
+  text-decoration: none;
+}
+.singleArticles4 a {
+  position: relative;
+  height: 90%;
+  border-radius: 0.5vw;
+  padding: 1% 1.5%;
+  display: flex;
+  border: solid 10px black;
+  transition: border-color 0.2s linear;
+  background-color: rgb(29, 35, 35);
+  cursor: pointer;
+  text-decoration: none;
+}
+.singleArticles5 a {
+  position: relative;
+  height: 90%;
+  border-radius: 0.5vw;
+  padding: 1% 1.5%;
+  display: flex;
+  border: solid 10px black;
+  transition: border-color 0.2s linear;
+  background-color: rgb(29, 35, 35);
+  cursor: pointer;
+  text-decoration: none;
+}
+
+
+
+
 .articlesImg1 {
   background-image: url("../images/news/actu1.jpg");
   background-size: cover;
@@ -83,17 +198,17 @@ body{
 }
 
 .articlesImg1, .articlesImg2, .articlesImg3, .articlesImg4, .articlesImg5, .articlesImg6 {
-  width: 24%;
+  width: 50%;
   height: 100%;
 }
 .articlesContent {
-  width: 70%;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: start;
   
   text-shadow: None;
-  color: black;
+  color: white;
   margin-left: 2%;
 }
