--- a/PROJET WEB/style/info.css
+++ b/PROJET WEB/style/info.css
@@ -1,4 +1,7 @@
-
+@font-face{
+  font-family: "beaufort";
+  src: url("../style/Beaufort\ for\ LOL\ Bold.ttf") format("truetype");
+}
 
 .fondnews{
     width: 90%;
@@ -11,7 +14,7 @@
 *{
   margin: 2px;
   padding: 2px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "beaufort", serif;
   scrollbar-width: thin;
   scrollbar-color: blue black;
 }
@@ -297,8 +300,8 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: start;
-  
   text-shadow: None;
   color: white;
   margin-left: 2%;
 }
+
