--- a/PROJET WEB/style/pageChara.css
+++ b/PROJET WEB/style/pageChara.css
@@ -1,3 +1,8 @@
+@font-face{
+  font-family: "beaufort";
+  src: url("../style/Beaufort\ for\ LOL\ Bold.ttf") format("truetype");
+}
+
 *{
     margin: 2px;
     padding: 2px;
@@ -47,67 +52,7 @@
   margin-bottom: 12%;
 }
 
-.akshan{
-  position: absolute;
-  margin-top: 5%;
-  width: 72.5%;
-  margin-left: -16%;
-}
 
-.belveth{
-  position: absolute;
-  margin-top: 5%;
-  width: 72.5%;
-  margin-left: -20%;
-}
-
-.gwen{
-  position: absolute;
-  margin-top: 2%;
-  width: 65%;
-  margin-left: -17%;
-}
-
-.ksante{
-  position: absolute;
-  margin-top: 3.32%;
-  width: 72%;
-  margin-left: -17%;
-}
-
-.lillia{
-  position: absolute;
-  margin-top: 5.3%;
-  width: 72%;
-  margin-left: -10%;
-}
-
-.renata{
-  position: absolute;
-  margin-top: 5.3%;
-  width: 72%;
-  margin-left: -20%;
-}
-
-.senna{
-  position: absolute;
-  margin-top: 4.7%;
-  width: 73%;
-  margin-left: -20%;
-}
-
-.vex{
-  position: absolute;
-  margin-top: 5.2%;
-  width: 73%;
-  margin-left: -20%;
-}
-.yuumi{
-  position: absolute;
-  margin-top: 0%;
-  width: 73%;
-  margin-left: -15%;
-}
 
 .competence1{
   position: absolute;
@@ -163,4 +108,31 @@
 .lorespace{
   margin-top: 20px;
   line-height: 150%;
+}
+
+.personom-akshan{
+  position: absolute;
+  margin-top: 5.7%;
+  margin-left: 1%;
+  z-index: 20;
+  font-family: "beaufort", serif;
+  font-size: 450%;
+  color: white;
+}
+.personom-seraphine{
+  position: absolute;
+  margin-top: 6.1%;
+  margin-left: 1%;
+  z-index: 20;
+  font-family: "beaufort", serif;
+  font-size: 400%;
+  color: white;
+}
+
+.textbox{
+  position: absolute;
+  margin-top: 6%;
+  margin-left: 0%;
+  width: 20%;
+  z-index: 19;
 }
