--- a/PROJET WEB/style/index.css
+++ b/PROJET WEB/style/index.css
@@ -10,6 +10,7 @@
   font-weight: 500;
   scrollbar-width: thin;
   scrollbar-color: blue black;
+  
 }
 
 *::-webkit-scrollbar-thumb {
@@ -20,7 +21,7 @@
 
 body{
   color: white;
-  
+  overflow-x: hidden;
   margin-left: -1.5px;
   margin-top: 000px;
   margin-bottom: 100px;
@@ -30,6 +31,7 @@ body{
   background-size: auto;
   background-attachment: fixed;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #000;
 }
 
 .arbre{
@@ -53,6 +55,7 @@ body{
   position: absolute;
   margin-top: 80%;
   margin-left: -10%;
+  width: 80%;
 }
 
 .etoilemontante{
@@ -60,10 +63,11 @@ body{
   margin-top: 95%;
   color: black;
   margin-left: 65%;
+  font-size: 80%;
 }
 .separation{
   position: absolute;
-  margin-top: 9%;
+  margin-top: 16%;
   width: 30%;
   margin-left: 36%;
 }
@@ -72,7 +76,7 @@ body{
   margin-top: 100%;
   color: black;
   margin-left: 72%;
-  font-size: 10vh;
+  font-size: 200%;
 }
 .zeri22:hover {
   filter: brightness(120%) drop-shadow(0 0 1rem black);
@@ -82,11 +86,48 @@ body{
 
 .newsrecentes{
   position: absolute;
-  margin-left: 41%;
-  margin-top: 10%;
-  font-size: 200%;
+  margin-left: 33%;
+  margin-top: 15%;
+  font-size: 130%;
   font-family: "beaufort", serif;
   
 }
 
 
+@media screen and (min-width: 601px) {
+  .zeri22{
+    position: absolute;
+    margin-top: 100%;
+    color: black;
+    margin-left: 72%;
+    font-size: 450%;
+  }
+  .eclairzeri{
+    position: absolute;
+    margin-top: 80%;
+    margin-left: -10%;
+    size: 80%;
+  }
+  .etoilemontante{
+    position: absolute;
+    margin-top: 95%;
+    color: black;
+    margin-left: 65%;
+    font-size: 200%;
+  }
+  .newsrecentes{
+    position: absolute;
+    margin-left: 41%;
+    margin-top: 10%;
+    font-size: 200%;
+    font-family: "beaufort", serif;
+    
+  }
+  .separation{
+    position: absolute;
+    margin-top: 9%;
+    width: 30%;
+    margin-left: 36%;
+  }
+
+}
