--- a/PROJET WEB/style/index.css
+++ b/PROJET WEB/style/index.css
@@ -22,58 +22,51 @@
 body{
   color: white;
   overflow-x: hidden;
-  margin-left: -1.5px;
-  margin-top: 000px;
-  margin-bottom: 100px;
   background-image: url("../images/fonds/fond\ 1.png");
-  background-position: 0px 80px;
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
   background-attachment: fixed;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #000;
 }
 
-.arbre{
-  margin-top: 14%;
-  margin-left: -1%;
-  width: auto;
-  height: 50%;
-  max-width: 101%;
-  text-decoration: none;
-}
+
 
 .parchemin3{
   position: absolute;
   margin-left: -1%;
   width: 100.3%;
-  margin-top: 80%;
+  margin-top: 55%;
+}
+.coucou2{
+  position: relative;
+  margin-top: 100%;
 }
 
 
 .eclairzeri{
   position: absolute;
-  margin-top: 80%;
+  margin-top: 0%;
   margin-left: -10%;
   width: 80%;
 }
 
 .etoilemontante{
   position: absolute;
-  margin-top: 95%;
+  margin-top: 50%;
   color: black;
   margin-left: 65%;
   font-size: 80%;
 }
 .separation{
   position: absolute;
-  margin-top: 16%;
+  margin-top: 55%;
   width: 30%;
   margin-left: 36%;
 }
 .zeri22{
   position: absolute;
-  margin-top: 100%;
+  margin-top: 50%;
   color: black;
   margin-left: 72%;
   font-size: 200%;
@@ -97,20 +90,20 @@ body{
 @media screen and (min-width: 601px) {
   .zeri22{
     position: absolute;
-    margin-top: 100%;
+    margin-top: 55%;
     color: black;
     margin-left: 72%;
     font-size: 450%;
   }
   .eclairzeri{
     position: absolute;
-    margin-top: 80%;
+    margin-top: 55%;
     margin-left: -10%;
     size: 80%;
   }
   .etoilemontante{
     position: absolute;
-    margin-top: 95%;
+    margin-top: 55%;
     color: black;
     margin-left: 65%;
     font-size: 200%;
