--- a/PROJET WEB/style/iconNavBar.css
+++ b/PROJET WEB/style/iconNavBar.css
@@ -13,7 +13,7 @@
   position: fixed;
   display: block;
   margin-top: -1%;
-  height: 12.5%;
+  height: 100px;
 }
 
 
@@ -41,6 +41,10 @@
  transition: filter 0.25s ease;
 }
 
+.logo_general{
+  width: 75px;
+  height: 75px;
+}
 
 
 
