--- a/PROJET WEB/style/iconNavBar.css
+++ b/PROJET WEB/style/iconNavBar.css
@@ -13,7 +13,7 @@
   position: fixed;
   display: block;
   margin-top: -1%;
-  height: 100px;
+  height: 10,1%;
 }
 
 
@@ -33,8 +33,8 @@
 .icon-bar a:hover {
   filter: brightness(120%);
   transition: filter 0.25s ease;
-  
 }
+
 .icon-bar label:hover{
   filter: brightness(140%);
  transform: scale(1.1);
@@ -50,9 +50,9 @@
 
 .carte {
   margin-left: 49%;
-  z-index: 55;
+  z-index: 66;
+  overflow: hidden;
   width: 50%;  
-  overflow: auto; 
   background-color: rgba(13, 14, 14, 1);
   position:absolute;
   position: fixed;
@@ -100,6 +100,7 @@ margin-left: 10%;
   transform: scale(1.1);
   background-size: 0 3px, 150% 3px;
 }
+
 .trait{
   background:
   linear-gradient(
@@ -186,7 +187,8 @@ z-index: 100;
   display:block;
   max-height: 800px;
   width: auto;
-  
+  overflow-x: hidden;
+  overflow-y: hidden;
   background-color: rgb(13, 14, 14, 1);
 }
 
