--- a/PROJET WEB/style/index.css
+++ b/PROJET WEB/style/index.css
@@ -53,7 +53,7 @@ body{
 
 .etoilemontante{
   position: absolute;
-  margin-top: 0%;
+  margin-top: 50%;
   color: black;
   margin-left: 65%;
   font-size: 80%;
@@ -66,7 +66,7 @@ body{
 }
 .zeri22{
   position: absolute;
-  margin-top: 10%;
+  margin-top: 50%;
   color: black;
   margin-left: 72%;
   font-size: 200%;
@@ -93,7 +93,7 @@ body{
 
 
 @media screen and (min-width: 601px) {
-  .zeri22{
+  .zeri-accueil{
     position: absolute;
     margin-top: 79%;
     color: black;
@@ -108,7 +108,7 @@ body{
   }
   .etoilemontante{
     position: absolute;
-    margin-top: -30%;
+    margin-top: 70%;
     color: black;
     margin-left: 65%;
     font-size: 200%;
